emf-services/emf-device/tests/snapshots/integration_tests__insert.snap
---
source: emf-services/emf-device/tests/integration_tests.rs
expression: xs

---
[
  {
    "id": "<ID>",
    "state_modified_at": "<STATE_MODIFIED_AT>",
    "state": "mounted",
    "filesystem": "fs0a9c",
    "host_id": "<HOST_ID>",
    "mountpoints": [
      "/mnt/fs0a9c",
      "/mnt/fs0a9c2"
    ]
  }
]
